--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "devDependencies": {
     "ts-node": "7.0.1",
     "typescript": "3.1.1"
+  },
+  "dependencies": {
+    "js-function-reflector": "2.0.3"
   }
 }
