docs: add matchArray

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "keywords": [
     "pattern-matching",
     "match",
-    "pattern"
+    "pattern",
+    "javascript",
+    "typescript"
   ],
   "author": "Loc Phan <phanhoangloc@gmail.com>",
   "license": "MIT",
