--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "rm -rf dist",
     "build": "tsc",
     "prepublish": "yarn build",
-    "test": "ts-node test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,8 +31,11 @@
   },
   "homepage": "https://github.com/phanhoangloc/match-values#readme",
   "devDependencies": {
+    "@types/jest": "24.0.11",
+    "jest": "24.7.1",
+    "ts-jest": "24.0.2",
     "ts-node": "7.0.1",
-    "typescript": "3.1.1"
+    "typescript": "3.4.5"
   },
   "dependencies": {
     "js-function-reflector": "2.0.3"
