--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "match-values",
   "version": "1.1.0",
-  "description": "Apply pattern matching in JavaScript",
+  "description": "Pattern matching on values",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
@@ -39,5 +39,7 @@
     "ts-node": "7.0.1",
     "typescript": "3.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash.isequal": "4.5.0"
+  }
 }
