--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "match-values",
+  "name": "@locphan87/match-values",
   "version": "1.1.0",
   "description": "Pattern matching on values",
   "main": "./dist/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phanhoangloc/match-values.git"
+    "url": "https://github.com/locphan87/match-values"
   },
   "keywords": [
     "pattern-matching",
@@ -25,19 +25,22 @@
     "javascript",
     "typescript"
   ],
-  "author": "Loc Phan <phanhoangloc@gmail.com>",
+  "author": "Loc Phan <locphan87@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/phanhoangloc/match-values/issues"
+    "url": "https://github.com/locphan87/match-values/issues"
   },
-  "homepage": "https://github.com/phanhoangloc/match-values#readme",
+  "homepage": "https://github.com/locphan87/match-values#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/locphan87"
+  },
   "devDependencies": {
-    "@types/jest": "24.0.11",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
-    "ts-jest": "24.0.2",
-    "ts-node": "7.0.1",
-    "typescript": "3.4.5"
+    "@types/jest": "26.0.24",
+    "jest": "27.0.6",
+    "prettier": "2.3.2",
+    "ts-jest": "27.0.4",
+    "ts-node": "10.1.0",
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "lodash.isequal": "4.5.0"
