--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@locphan87/match-values",
-  "version": "1.1.0",
-  "description": "Pattern matching on values",
+  "version": "2.0.0",
+  "description": "Apply pattern matching in JavaScript",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
@@ -12,7 +12,8 @@
     "prebuild": "rm -rf dist",
     "build": "tsc",
     "prepublish": "yarn build",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "open ./coverage/lcov-report/index.html"
   },
   "repository": {
     "type": "git",
@@ -42,7 +43,5 @@
     "ts-node": "10.1.0",
     "typescript": "4.3.5"
   },
-  "dependencies": {
-    "lodash.isequal": "4.5.0"
-  }
+  "dependencies": {}
 }
