--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -37,7 +37,7 @@ jobs:
           cmd: test
 
       - name: Copy Artifacts
-      - run: mkdir public && mv test-report.html public/
+        run: mkdir public && mv test-report.html public/
 
       - name: Publish Test Results
         uses: peaceiris/actions-gh-pages@v3
