--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@locphan87/match-values",
-  "version": "2.1.1",
+  "name": "match-values",
+  "version": "2.1.2",
   "description": "Apply pattern matching in JavaScript",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -32,15 +32,15 @@
   },
   "homepage": "https://github.com/locphan87/match-values#readme",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/locphan87"
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@types/jest": "29.5.12",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.17.46",
     "jest": "29.7.0",
-    "jest-html-reporter": "^3.10.2",
-    "prettier": "3.3.2",
-    "typescript": "5.4.5"
+    "jest-html-reporter": "^4.1.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.3"
   },
   "dependencies": {},
   "license": "MIT"
